<resources>
    <string name="app_name">Learn Music Player</string>
    <string name="tab_text_1">Songs</string>
    <string name="tab_text_2">Albums</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing_text">Now Playing</string>
    <string name="base_duration">- : -</string>
    <string name="base_duration_played">0:00</string>
    <string name="unknown_text">Unknown</string>
    <string name="search_text">Search</string>
    <string name="delete_text">Delete</string>
    <string name="sort_by_text">Sort by</string>
    <string name="name_text">Name</string>
    <string name="date_text">Date</string>
    <string name="size_text">Size</string>
</resources>