<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.detail.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing_text"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backBtn" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_menu_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/albumArtPlay"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_below="@id/layoutTop"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumArtPlay"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="This is song name"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/songName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="This is song artist"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSeekBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/layoutBottom">

        <TextView
            android:id="@+id/durationPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/base_duration_played"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBar" />

        <TextView
            android:id="@+id/durationTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/base_duration"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBar" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/durationTotal"
            app:layout_constraintStart_toEndOf="@+id/durationPlayed"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_bg">

        <ImageView
            android:id="@+id/shuffleBtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/playPauseBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/playPauseBtn"
            app:srcCompat="@drawable/ic_baseline_shuffle_24" />

        <ImageView
            android:id="@+id/prevBtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/playPauseBtn"
            app:layout_constraintEnd_toStartOf="@+id/playPauseBtn"
            app:layout_constraintTop_toTopOf="@+id/playPauseBtn"
            app:srcCompat="@drawable/ic_baseline_skip_previous_24" />

        <ImageView
            android:id="@+id/nextBtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/playPauseBtn"
            app:layout_constraintStart_toEndOf="@+id/playPauseBtn"
            app:layout_constraintTop_toTopOf="@+id/playPauseBtn"
            app:srcCompat="@drawable/ic_baseline_skip_next_24" />

        <ImageView
            android:id="@+id/repeatBtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/playPauseBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/playPauseBtn"
            app:srcCompat="@drawable/ic_baseline_repeat_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playPauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>